# Melete

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README-amplify.md  README.md  amplify.yml  install.sh  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
amplify/: README.md  backend.ts  tsconfig.json
crates/journal-app/: Cargo.toml
crates/journal-app/src/: account_settings.rs  admin_panel.rs  asset_resolver.rs  brush_library.rs  canvas_widget.rs  config.rs  dialogs.rs  fetcher.rs  first_run.rs  history.rs  input.rs  main.rs  notebook_sync.rs  notebook_template_creator.rs  onboarding.rs  pdf_export.rs  remote_browser.rs  settings_dialogs.rs  shortcuts.rs  sign_in_modal.rs  state.rs  subscription_settings.rs  template_creator.rs  template_io.rs  template_manager.rs  template_preview.rs  thumbnail.rs  tool_editor.rs  tool_options_popup.rs  tool_settings.rs  toolbar.rs  vello_glarea.rs  window.rs
crates/journal-app/src/views/: home.rs  mod.rs  notebook.rs  planner_nav.rs
crates/journal-canvas/: Cargo.toml
crates/journal-canvas/src/: background_renderer.rs  brush.rs  built_in_brushes.rs  grid_renderer.rs  lib.rs  renderer.rs  stroke_renderer.rs  vello_renderer.rs  viewport_transform.rs  widget_renderer.rs
crates/journal-core/: Cargo.toml
crates/journal-core/src/: asset_resolver.rs  brush.rs  calendar.rs  lib.rs  notebook.rs  page.rs  pen.rs  stroke.rs  template.rs  widget_data.rs
crates/journal-storage/: Cargo.toml  build.rs
crates/journal-storage/src/: backend.rs  brush_store.rs  db.rs  entitlement.rs  error.rs  lib.rs  multi_file_backend.rs  notebook_store.rs  page_store.rs  remote_notebook_store.rs  schema.rs  section_store.rs  sqlite_backend.rs  stroke_codec.rs  stroke_store.rs  template_catalog_store.rs  template_migration.rs  util.rs
crates/journal-storage/src/remote_template_store/: auth.rs  config.rs  graphql.rs  s3.rs  store.rs
crates/journal-storage/tests/: amplify_outputs_config.rs  smoke_signin.rs  template_migration.rs
crates/journal-templates/: Cargo.toml
crates/journal-templates/src/: builtin.rs  canvas_bridge.rs  error.rs  format.rs  lib.rs  notebook_template_builtin.rs  registry.rs  title_format.rs
crates/journal-templates/src/builtin/: mod.rs
crates/journal-templates/src/builtin/franklin/: franklin_daily.rs  franklin_weekly.rs  mod.rs
crates/journal-templates/src/builtin/fullfocus/: fullfocus_daily.rs  mod.rs
crates/journal-templates/src/builtin/grids/: dotted.rs  engineering_graph.rs  grid.rs  hexagonal.rs  isometric.rs  mod.rs
crates/journal-templates/src/builtin/military/: gotwa.rs  medevac.rs  mod.rs  opord.rs  pace.rs  pcc_pci.rs  range_card.rs  salute.rs  uxo.rs
crates/journal-templates/src/builtin/note_taking/: cornell_notes.rs  mod.rs  music_staff.rs
crates/journal-templates/src/builtin/paper/: blank.rs  college_ruled.rs  mod.rs  ruled.rs  wide_ruled.rs
crates/journal-templates/src/builtin/planner/: daily_planner.rs  mod.rs  monthly_goals.rs  quarterly_review.rs
crates/journal-templates/tests/: seed_round_trip.rs
crates/journal-web-shim/: Cargo.toml
crates/journal-web-shim/src/: lib.rs
crates/journal-web-viewer/: Cargo.toml
crates/journal-web-viewer/fonts/: LICENSE-NotoSans.txt
crates/journal-web-viewer/src/: bundle.rs  lib.rs
crates/melete-app/: Cargo.toml
crates/melete-app/src/: account_settings.rs  admin_panel.rs  asset_resolver.rs  brush_library.rs  canvas_widget.rs  config.rs  dialogs.rs  fetcher.rs  first_run.rs  history.rs  input.rs  main.rs  notebook_sync.rs  notebook_template_creator.rs  notify.rs  onboarding.rs  pdf_export.rs  remote_browser.rs  settings_dialogs.rs  shortcuts.rs  sign_in_modal.rs  state.rs  subscription_settings.rs  template_creator.rs  template_io.rs  template_manager.rs  template_preview.rs  thumbnail.rs  tool_editor.rs  tool_options_popup.rs  tool_settings.rs  toolbar.rs  vello_glarea.rs  window.rs
crates/melete-app/src/views/: home.rs  notebook.rs  planner_nav.rs
crates/melete-canvas/: Cargo.toml
crates/melete-canvas/src/: background_renderer.rs  built_in_brushes.rs  grid_renderer.rs  lib.rs  renderer.rs  stroke_renderer.rs  vello_renderer.rs  viewport_transform.rs  widget_renderer.rs
crates/melete-canvas/tests/: golden_brushes.rs
crates/melete-core/: Cargo.toml
crates/melete-core/src/: asset_resolver.rs  brush.rs  notebook.rs  pen.rs  stroke.rs  template.rs  viewport.rs
crates/melete-storage/: Cargo.toml  build.rs
crates/melete-storage/src/: backend.rs  entitlement.rs  error.rs  fs_atomic.rs  lib.rs  multi_file_backend.rs  notebook_store.rs  page_store.rs  remote_notebook_store.rs  section_store.rs  sqlite_backend.rs  stroke_codec.rs  stroke_store.rs  template_migration.rs
crates/melete-storage/src/remote_template_store/: auth.rs  config.rs  graphql.rs  identity.rs  jwt.rs  s3.rs  store.rs
crates/melete-storage/tests/: amplify_outputs_config.rs  smoke_signin.rs  template_migration.rs
crates/melete-templates/: Cargo.toml
crates/melete-templates/src/: canvas_bridge.rs  format.rs  lib.rs  registry.rs  title_format.rs
crates/melete-templates/src/builtin/: mod.rs
crates/melete-templates/src/builtin/grids/: dotted.rs  engineering_graph.rs  grid.rs  hexagonal.rs  isometric.rs
crates/melete-templates/src/builtin/paper/: blank.rs  college_ruled.rs  ruled.rs  wide_ruled.rs
crates/melete-templates/tests/: seed_round_trip.rs  wire_shape_round_trip.rs
crates/melete-web-shim/: Cargo.toml
crates/melete-web-shim/src/: lib.rs
crates/melete-web-viewer/: Cargo.toml
crates/melete-web-viewer/src/: bundle.rs  lib.rs
crates/melete-widgets/: Cargo.toml
crates/melete-widgets/src/: lib.rs
docs/: STRUCTURE.md  brush-engine.md  brush-shapes.md  renderer-vello-migration.md  ux-audit.md  web-portal.md
packaging/: app.melete.Melete.yaml  app.melete.yaml  dev.s7k.journal.yaml  dev.s7k.melete.yaml
resources/: app.melete.Melete.desktop  app.melete.desktop  dev.s7k.journal.desktop  dev.s7k.melete.desktop
scripts/: install-from-source.sh  install.sh
templates/: blank.toml  dotted.toml  grid.toml  ruled.toml
(+142 files in other folders)
