[workspace]
members = [
    "crates/melete-core",
    "crates/melete-canvas",
    "crates/melete-storage",
    "crates/melete-templates",
    "crates/melete-widgets",
    "crates/melete-app",
    "crates/melete-web-shim",
    "crates/melete-web-viewer",
]
# `default-members` keeps the desktop build (`cargo build` with no
# package selector) from compiling the WASM crates. Each web crate
# also compiles cleanly on the host so `cargo build --workspace` and
# `cargo test --workspace` still cover them — `default-members` just
# avoids the wgpu / browser-specific code paths from showing up in
# the desktop binary's link closure by default.
default-members = [
    "crates/melete-core",
    "crates/melete-canvas",
    "crates/melete-storage",
    "crates/melete-templates",
    "crates/melete-widgets",
    "crates/melete-app",
]
resolver = "2"

# Shared metadata every workspace crate inherits via
# `package = { ... workspace = true }`. Each crate keeps its own
# `name` (must be unique on crates.io) and may override individual
# fields. Fields that gate publishability live here so a future
# `cargo publish` doesn't fail per-crate (#33).
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Sniper7Kills-LLC/Melete"
authors = ["Sniper7Kills LLC"]
homepage = "https://melete.app"

[workspace.dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
cairo-rs = { version = "0.20", features = ["pdf"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "5"
