[package]
name = "journal-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "journal-app"
path = "src/main.rs"

[dependencies]
journal-core = { path = "../journal-core" }
journal-canvas = { path = "../journal-canvas" }
journal-storage = { path = "../journal-storage" }
journal-templates = { path = "../journal-templates" }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
cairo-rs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
poppler-rs = { version = "0.24", features = ["v22_7"], optional = true }

[features]
default = ["pdf"]
pdf = ["dep:poppler-rs", "journal-canvas/pdf"]
