[package]
name = "journal-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "journal-app"
path = "src/main.rs"

[dependencies]
journal-core = { path = "../journal-core" }
journal-canvas = { path = "../journal-canvas" }
journal-storage = { path = "../journal-storage" }
journal-templates = { path = "../journal-templates" }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
cairo-rs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
poppler-rs = { version = "0.24", features = ["v22_7"], optional = true }
glow = { version = "0.16", optional = true }
libloading = { version = "0.8", optional = true }
journal-widgets = { path = "../journal-widgets", optional = true }
ureq = { version = "2", default-features = false, features = ["tls"] }
serde_json = { workspace = true }
roxmltree = "0.20"

[features]
default = ["pdf", "vello"]
pdf = ["dep:poppler-rs", "journal-canvas/pdf"]
vello = ["dep:glow", "dep:libloading", "dep:journal-widgets", "journal-canvas/vello"]
