[package]
name = "journal-canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
journal-core = { path = "../journal-core" }
gtk4 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
poppler-rs = { version = "0.24", features = ["v22_7"], optional = true }

[features]
default = ["pdf"]
pdf = ["dep:poppler-rs"]
