[package]
name = "journal-canvas"
version = "0.1.0"
edition = "2021"

[dependencies]
journal-core = { path = "../journal-core" }
gtk4 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
poppler-rs = { version = "0.24", features = ["v22_7"], optional = true }
vello = { version = "0.8", optional = true }
parley = { version = "0.9", optional = true }
pollster = { version = "0.4", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"], optional = true }

[features]
default = ["pdf"]
pdf = ["dep:poppler-rs"]
vello = ["dep:vello", "dep:parley", "dep:pollster", "dep:image"]
