[package]
name = "journal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
