[package]
name = "journal-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
journal-core = { path = "../journal-core" }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
