[package]
name = "journal-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
journal-core = { path = "../journal-core" }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = "0.10"
hex = "0.4"
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hex = "0.4"

[features]
# Enables the remote (AWS Amplify) template store. Empty for now —
# issue #6 will populate this with `reqwest` + the AWS SDK crates.
# This crate's `build.rs` and the `remote_template_store::config`
# module are gated on this feature.
remote = []
