[package]
name = "journal-templates"
version = "0.1.0"
edition = "2021"

[dependencies]
journal-core = { path = "../journal-core" }
journal-canvas = { path = "../journal-canvas" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
