[package]
name = "melete-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "melete-app"
path = "src/main.rs"

[dependencies]
melete-core = { path = "../melete-core" }
melete-canvas = { path = "../melete-canvas" }
melete-storage = { path = "../melete-storage" }
melete-templates = { path = "../melete-templates" }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
cairo-rs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
poppler-rs = { version = "0.24", features = ["v22_7"], optional = true }
glow = { version = "0.16", optional = true }
libloading = { version = "0.8", optional = true }
melete-widgets = { path = "../melete-widgets", optional = true }
ureq = { version = "2", default-features = false, features = ["tls"] }
serde_json = { workspace = true }
roxmltree = "0.20"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rusqlite = { workspace = true }

[features]
default = ["pdf", "vello", "remote"]
pdf = ["dep:poppler-rs", "melete-canvas/pdf"]
vello = ["dep:glow", "dep:libloading", "dep:melete-widgets", "melete-canvas/vello"]
remote = ["melete-storage/remote"]

[package.metadata.cargo-machete]
# `cairo-rs` is the crate name; the lib it ships is `cairo`. Used as
# `cairo::*` in thumbnail.rs, pdf_export.rs, canvas_widget.rs etc. —
# machete only matches by Cargo.toml name.
# `poppler-rs` is feature-gated behind `pdf` and used in template_manager.rs.
ignored = ["cairo-rs", "poppler-rs"]
