[package]
name = "melete-canvas"
description = "Vello + Cairo canvas renderers for Melete (background, grid, widget, stroke)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
melete-core = { path = "../melete-core" }
gtk4 = { workspace = true, optional = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
poppler-rs = { version = "0.26", features = ["v22_7"], optional = true }
vello = { version = "0.8", optional = true }
pollster = { version = "0.4", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"], optional = true }

[features]
# Default keeps the desktop binary building unchanged (`cargo build`).
# The `desktop` feature gates everything that needs gtk4 / cairo / pixbuf
# (the legacy renderer, stroke_renderer, widget_renderer, and the Cairo
# draw helpers in background_renderer / grid_renderer). Pure data types
# (`BackgroundConfig`, `GridSettings`, `ViewportTransform`, `Brush`,
# `built_in_brushes`, the Vello `vello_renderer`) compile without it,
# enabling `wasm32-unknown-unknown` builds with `--no-default-features
# --features vello`.
default = ["pdf", "desktop"]
desktop = ["dep:gtk4"]
# `pdf` rasterises PDF pages via Poppler+Cairo, so it requires `desktop`.
pdf = ["dep:poppler-rs", "desktop"]
vello = ["dep:vello", "dep:pollster", "dep:image"]

[dev-dependencies]
toml = { workspace = true }

[package.metadata.cargo-machete]
# Used inside `#[cfg(feature = "pdf")]` in vello_renderer.rs — cargo-machete
# doesn't follow feature-gated `use` statements.
ignored = ["poppler-rs"]
