[package]
name = "melete-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
melete-core = { path = "../melete-core" }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = "0.10"
hex = "0.4"
dirs = { workspace = true }
hmac = { version = "0.12", optional = true }
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hex = "0.4"

[features]
# Enables the remote (AWS Amplify) template store. Pulls in `reqwest`
# (blocking + rustls), `hmac` for SigV4 signing, and the
# `remote_template_store::*` modules. Cognito + AppSync are spoken
# directly over HTTPS to avoid pulling the full AWS SDK; SigV4 for
# S3 is hand-rolled on top of `sha2` + `hmac`.
remote = ["dep:reqwest", "dep:hmac", "dep:keyring", "dep:base64"]
