[package]
name = "melete-web-shim"
description = "Pure-data WASM bindings for melete-templates TOML round-trip."
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
# `cdylib` is what wasm-bindgen consumes when targeting wasm32; `rlib`
# keeps `cargo test` / clippy / native consumers usable for free.
crate-type = ["cdylib", "rlib"]

[dependencies]
melete-core = { path = "../melete-core" }
melete-templates = { path = "../melete-templates", default-features = false, features = ["wasm"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
# Off by default so non-wasm cargo test stays slim. The build script
# turns it on for the `--target wasm32-unknown-unknown` invocation so
# panics surface in the browser console instead of disappearing.
default = []
panic_hook = ["dep:console_error_panic_hook"]
