[package]
name = "melete-web-viewer"
description = "WASM-bindgen viewer wrapping Vello + WebGPU for the Melete web POC."
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
melete-core = { path = "../melete-core" }
melete-canvas = { path = "../melete-canvas", default-features = false, features = ["vello"] }
melete-widgets = { path = "../melete-widgets" }

# wgpu / vello pull in their own wasm-bindgen + web-sys closures; we
# also use them directly for the surface plumbing.
vello = "0.8"
wgpu = "28"

# Browser bindings.
wasm-bindgen = "0.2"
# Required at link time by `#[wasm_bindgen]` async functions even when
# no direct `wasm_bindgen_futures::*` use shows up in the source.
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# Lightweight oneshot channel for the wgpu `map_async` callback in
# `render_page_to_rgba`. `std::sync::mpsc` works on the desktop's
# blocking `device.poll(Wait)` path but wasm needs an async-friendly
# rendezvous that wasm_bindgen_futures can await without blocking
# the JS event loop.
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlElement",
    "Element",
    "GpuCanvasContext",
] }

# serde for the notebook-bundle JSON envelope.
serde = { workspace = true }
serde_json = { workspace = true }

# Logging into the browser console — `tracing` already speaks `log`'s
# bridge for us, but we keep it minimal: console-shim hooks up via the
# panic hook for now. Strict logging can be added later.
console_error_panic_hook = "0.1"

# Pure data types.
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []

[package.metadata.cargo-machete]
# Linked at build time by `#[wasm_bindgen]` async-function macro
# expansion — no direct `use` in the source.
ignored = ["wasm-bindgen-futures"]
