[package]
name = "melete-widgets"
description = "Vello scene-builder for Melete template widgets (web-importable)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
melete-core = { path = "../melete-core" }
vello = "0.8"
parley = "0.9"
chrono = { workspace = true }
uuid = { workspace = true }
